[tool.poetry]
name = "pixeljoint"
version = "0.1.0"
description = "Pixeljoint Artists Scraper"
authors = ["klhwjm <allanseixassantos123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
